tests/paczka1/fuzzy1/72594095.err
Error in line 3: joDvKskF S161 98,4
Error in line 4: joDvKskF S20 99,9
Error in line 6: joDvKskF S161 65,0
Error in line 21: A389 S1@1 4@,1
Error in line 19: 15H0Iz9F S429 71,7
Error in line 17: A389 S161 27,1
Error in line 25: age S20 96,7
Error in line 33: age S429 20,1
Error in line 35: age S161 69,3
